--- a/assets/css/faqs.css
+++ b/assets/css/faqs.css
@@ -1,4 +1,4 @@
-.tbox {
+.t201plugin .tbox {
   margin: 20px 0;
   overflow: auto;
   position: relative;
@@ -6,65 +6,51 @@
   border: 1px solid #dddddd;
   border-radius: 4px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); }
-
-.tbox-heading {
-  border-bottom: 1px solid #dddddd;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  padding: 12px 15px; }
-
-.tbox-body {
-  padding: 15px; }
-
-.tbox-footer {
-  border-bottom-left-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-top: 1px solid #ddd;
-  padding: 8px 15px; }
-
-.tbox h3 {
-  margin: 0;
-  display: inline-block; }
-
-.pull-right {
+  .t201plugin .tbox .tbox-heading {
+    border-bottom: 1px solid #dddddd;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    padding: 12px 15px; }
+  .t201plugin .tbox .tbox-body {
+    padding: 15px; }
+  .t201plugin .tbox .tbox-footer {
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-top: 1px solid #ddd;
+    padding: 8px 15px; }
+  .t201plugin .tbox h3 {
+    margin: 0;
+    display: inline-block; }
+.t201plugin .pull-right {
   float: right; }
-
-.ttable {
+.t201plugin .ttable {
   display: table;
   width: 100%;
   border-collapse: collapse; }
-
-.thead {
-  font-weight: bold;
-  display: table-row;
-  line-height: 25px;
-  font-size: 14px; }
-
-.trow {
-  display: table-row;
-  border-bottom: 1px solid #fefefe; }
-
-.tcol {
-  display: table-cell;
-  padding: 5px; }
-
-.trow:last-child {
-  border-bottom: 0px; }
-
-.tbtn {
+  .t201plugin .ttable .thead {
+    font-weight: bold;
+    display: table-row;
+    line-height: 25px;
+    font-size: 14px; }
+  .t201plugin .ttable .trow {
+    display: table-row;
+    border-bottom: 1px solid #fefefe; }
+    .t201plugin .ttable .trow:last-child {
+      border-bottom: 0px; }
+    .t201plugin .ttable .trow .tcol {
+      display: table-cell;
+      padding: 5px; }
+.t201plugin .tbtn {
   padding: 5px 10px;
   border-radius: 4px;
   text-decoration: none; }
-
-.tbtn-success {
+.t201plugin .tbtn-success {
   border: 1px solid #5cb85c; }
-
-.error-msg {
+.t201plugin .error-msg {
   color: #ff0000;
   font-style: italic;
   font-size: .85em; }
-
-.valid {
+.t201plugin .valid {
   color: #4bb648;
   position: absolute;
   right: 10px;
@@ -73,8 +59,7 @@
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   transition: all 1s ease; }
-
-.notvalid {
+.t201plugin .notvalid {
   color: #ff0000;
   font-size: 14px;
   position: absolute;
@@ -84,21 +69,19 @@
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   transition: all 1s ease; }
-
-.form-group {
+.t201plugin .form-group {
   position: relative; }
-
-.faqs_success_msg {
-  font-size: 20px;
-  padding-left: 15px;
-  color: #368000; }
-
-.faqs-msg {
+.t201plugin .think201-wp-fields-container {
+  margin: 10px 0; }
+  .t201plugin .think201-wp-fields-container input,
+  .t201plugin .think201-wp-fields-container textarea,
+  .t201plugin .think201-wp-fields-container select {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #dddddd; }
+.t201plugin .think201-wp-msg {
   font-size: 16px;
   display: none; }
-
-.faqs-fields-container {
-  margin: 10px 0; }
 
 #faqs-add-field {
   cursor: pointer;
